# document-copilot

./: .gitignore  AGENTS.md  README.md  session
backend/: .dockerignore  .env.example  AGENTS.md  Dockerfile  README.md  __init__.py  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  3c81ca3fef26_initial_schema.py  b7f4a1c2d9e8_add_document_tables.py  c5a8f1d6e2b9_make_document_table_title_text.py  d2e4b7a9c1f3_make_section_columns_text.py
backend/app/: config.py  main.py
backend/app/api/: auth.py  chat.py
backend/app/assistant/: README.md  __init__.py  agent.py  deps.py  instructions.md  outputs.py  progress.py  status.py  tools.py
backend/app/auth/: __init__.py  dependencies.py
backend/app/chat/: messages.py  orchestrator.py  streaming.py
backend/app/database/: __init__.py  chats.py  documents.py  session.py  supabase.py  users.py
backend/app/grounding/: __init__.py  validator.py
backend/app/retrieval/: README.md  __init__.py  embeddings.py  fusion.py  keywords.py  queries.py  retriever.py  types.py
backend/app/schemas/: chat.py
backend/chat/: orchestrator.py
backend/ingest/: __init__.py  chunk_and_embed.py  chunking.py  embeddings.py  load_source_documents.py  sec_tables.py
backend/retrieval/: fulltext_search.py  fusion.py  pgvector_search.py  retriever.py  types.py
backend/scripts/: smoke_assistant.py  smoke_retrieval.py
backend/tests/: README.md  conftest.py  test_fusion.py  verify_retrieval.py
backend/tests/assistant/: test_agent_integration.py  test_outputs.py  test_tools.py
backend/tests/chat/: test_messages.py  test_orchestrator.py  test_ownership.py  test_persistence.py  test_routes.py  test_streaming.py
backend/tests/grounding/: test_validator.py
backend/tests/ingest/: test_chunk_and_embed.py  test_chunking.py  test_sec_tables.py
backend/tests/retrieval/: test_fusion.py  test_keywords.py  (+4 more)
(+78 files in other folders)
